# libadt

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  clang_compiler.txt
algorithms/: CMakeLists.txt  algorithms.mk
algorithms/iterators/: CMakeLists.txt  build.mk  cl_iterator.c  dl_iterator.c  sl_iterator.c
algorithms/iterators/includes/: sl_iterator.h
examples/: examples.mk
examples/lists/: build.mk
examples/queues/: CMakeLists.txt  build.mk  evaluator.c
examples/stacks/: build.mk  topostfix.c
includes/: adt_commons.h  cl_iterator.h  cl_list.h  dl_deque.h  dl_deque_decl.h  dl_iterator.h  dl_list.h  dlist.h  dlist_decl.h  dq_queue.h  dq_stack.h  list.h  sl_iterator.h  sl_list.h  sl_queue.h  sl_queue_decl.h  sl_stack.h  sl_stack_decl.h  slist.h  slist_decl.h
lib/: lib.mk
lib/deques/: CMakeLists.txt  README.md  build.mk  dl_deque.c
lib/deques/includes/: dl_deque.h
lib/lists/: CMakeLists.txt  README.md  build.mk  cl_list.c  dl_list.c  dlist.c  sl_list.c  slist.c  slist.mk
lib/lists/includes/: adt_commons.h  cl_list.h  dl_list.h  list_commons.h  sl_list.h
lib/queues/: CMakeLists.txt  README.md  build.mk  dq_queue.c  sl_queue.c
lib/queues/includes/: dq_queue.h  sl_queue.h
lib/slist/: slist.c  slist.h
lib/stacks/: CMakeLists.txt  README.md  build.mk  dq_stack.c  sl_stack.c
lib/stacks/includes/: dq_stack.h  sl_stack.h
src/: CMakeLists.txt
src/algorithms/iterators/: cl_iterator.c  dl_iterator.c  sl_iterator.c
src/algorithms/iterators/includes/: cl_iterator.h  dl_iterator.h  sl_iterator.h
src/examples/: CMakeLists.txt
src/examples/queues/: evaluator.c
src/examples/stacks/: CMakeLists.txt  topostfix.c
src/lib/: CMakeLists.txt
src/lib/deques/: dl_deque.c
src/lib/deques/includes/: dl_deque.h
src/lib/includes/: libadt_commons.h
src/lib/lists/: README.md  cl_list.c  dl_list.c  sl_list.c
src/lib/lists/includes/: cl_list.h  dl_list.h  sl_list.h
src/lib/queues/: CMakeLists.txt  dq_queue.c  sl_queue.c
src/lib/queues/includes/: dq_queue.h  sl_queue.h
src/lib/stacks/: README.md  dq_stack.c  sl_stack.c
src/lib/stacks/includes/: dq_stack.h  sl_stack.h
tests/: CMakeLists.txt  tests.mk
tests/deques/: build.mk  dl_deque_tests.c
tests/lists/: CMakeLists.txt  build.mk  cl_list_tests.c  dl_list_tests.c  dlist_tests.c  list_tests.mk  sl_list_test_new.c  sl_list_tests.c  slist_tests.c
tests/queues/: CMakeLists.txt  build.mk  dq_queue_tests.c  sl_queue_tests.c
tests/slist/: slist_test.mk  test1.c
tests/stacks/: CMakeLists.txt  build.mk  dq_stack_tests.c  sl_stack_tests.c
